@@ -1,5 +1,7 @@
 2006-03-09  Danilo Šegan  <danilo@gnome.org>
 
+	* index.html: Updated text.
+
 	* templates/list-languages.tmpl:
 	* teams.py (TranslationTeams.compare_langs): 
 	Added function, sort languages.
